# fMRIEngine

./: README.md  README.txt
SignalModeling/src/: CMakeLists.txt  SignalModel.cxx  SignalModel.h  readme.txt
src/: CMakeLists.txt  GeneralLinearModel.cxx  SignalModel.cxx  SignalModel.h  main.cxx  readme.txt  vtkActivationDetector.h  vtkActivationFalseDiscoveryRate.h  vtkActivationRegionStats.h  vtkActivationVolumeCaster.cxx  vtkActivationVolumeCaster.h  vtkFMRIEngineConfigure.h  vtkGLMEstimator.cxx  vtkGLMEstimator.h  vtkGLMVolumeGenerator.cxx  vtkIsingActivationThreshold.cxx  vtkMultipleInputsImageFilter.cxx  vtkMultipleInputsImageFilter.h
